--- a/site/public/colmeia1.html
+++ b/site/public/colmeia1.html
@@ -22,6 +22,7 @@
             </div>
             <div class="btn" id="buttons">
                 <button class="button_dashboard"><a href="#">Colméias</a></button>
+                <button class="button_dashboard"><a href="dashboard.html">Fazenda</a></button>
             </div>
         </div>
         <div class="container">
@@ -34,17 +35,30 @@
     <div class="falso_header"></div>
     <div class="dash_container">
         <div class="dash_titulo">
-            <h1>Colmeia 01</h1>
+            <h1>Gráficos</h1>
         </div>
         <div class="conteudo"><!-- conteudos do dashboard -->
+            <div class="botões">
+            <button class="colmeias_button" onclick="obterDadosGrafico(1)">Colmeia 1</button>
+            <button class="colmeias_button" onclick="obterDadosGrafico(2)">Colmeia 2</button>
+            <button class="colmeias_button" onclick="obterDadosGrafico(3)">Colmeia 3</button>
+            <button class="colmeias_button" onclick="obterDadosGrafico(4)">Colmeia 4</button>
+            <button class="colmeias_button" onclick="obterDadosGrafico(5)">Colmeia 5</button>
+            </div>
+            <div class="chartcont">
             <div class="card_graficos">
                 <canvas id="myChart" class="graficos"></canvas>
             </div>
-        </div>
-
+        <div class="metricas">
+            Temperatura Máxima Hoje: <span id="span_max"></span>
+            Temperatura Mínima Hoje: <span id="span_min"></span>
+            Temperatura Média Hoje: <span id="span_avg"></span> 
+            Quantidade de Alertas Hoje:<span id="qtd_al"></span>
     </div>
     </div>
-
+    </div>
+    </div>
+</div>
 </body>
 
 </html>
@@ -160,7 +174,7 @@ function obterDadosGrafico(idDados) {
                         id: 'y-temperatura',
                         ticks: {
                             beginAtZero: true,
-                            max: 100,
+                            max: 50,
                             min: 0
                         }
                     }
