--- a/site/public/dashboard.html
+++ b/site/public/dashboard.html
@@ -204,7 +204,7 @@ function atualizacaoPeriodica() {
             classe_temperatura = 'cor-alerta alerta-frio';
             console.log("caiu no 4")
         }
-        else if (temperaturaAtual < limites.min_temperatura) {
+        else if (temperaturaAtual < limites.muito_frio) {
             classe_temperatura = 'cor-alerta perigo-frio';
             console.log("caiu no 5")
         }
