--- a/site/public/colmeia1.html
+++ b/site/public/colmeia1.html
@@ -232,8 +232,7 @@ function obterDadosGrafico(idDados) {
                     media = resposta[i].Media;
                     metricas.innerHTML = `Temperatura Máxima: ${maxima}°C<br>
             Temperatura Mínima: ${minima}°C <br>
-            Temperatura Média: ${media}°C<br>
-            Quantidade de Alertas:<span id="qtd_al"></span>`
+            Temperatura Média: ${media}°C<br>`
                 }
 
             });
